update add topic css for iOS squish bug

--- a/web-2/src/style/components/_add-topics.scss
+++ b/web-2/src/style/components/_add-topics.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 $size-xs $size-xs $size-xs;
-    padding: $size-xs $size-xs;
+    padding: $size-xs $size-xs 0 $size-xs;
     background-color: $color-white;
     border-radius: 4px;
     box-shadow: 0 4px 10px rgba($color: $color-black, $alpha: 0.25);
@@ -51,6 +51,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: $size-xs 0;
+  }
+
+  &__total-topics {
+    margin-bottom: $size-xs;
   }
 }
 
